--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -64,3 +64,11 @@ h2 {
     padding-left:1rem;
     text-align:center;
 }
+
+h3 {
+    font-size: 37px;
+    color:white;
+    padding: 15px;
+    text-align:center;
+    font-family: 'Oswald', Arial, sans-serif;
+}
