--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 #banner{
-    background: linear-gradient(rgba(0,0,0,0.5)), url(wes-hicks-MEL-jJnm7RQ-unsplash.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(file:///Users/carlosjortiz-mendoza/Desktop/bioSite%20Project/Images/wes-hicks-mel-jjnm7rq-unsplash.png);
     background-size: cover;
     background-position: center;
     height:100vh;
+    width:100%;
 }
 
 .banner-text{
